rename packages and add blob

--- a/config/blobs.yml
+++ b/config/blobs.yml
@@ -1,1 +1,6 @@
---- {}
+---
+zeus/ZeusTM_97_Linux-x86_64.tar:
+  object_id: 20aab812-c01f-40ef-8705-9017bed18e2a
+  sha: !binary |-
+    ODE4MTRjN2M0YTc5YTk4ZGNlOGM4NDU1MTcyZDBlNWZiODIxOWExNg==
+  size: 439070720
