working install & initial config

--- a/deployment/steelapp-vcloud.yml
+++ b/deployment/steelapp-vcloud.yml
@@ -53,7 +53,7 @@ properties:
   steelapp:
     password: password123  
     admin_ip: 10.1.7.10
-    license: nil
+    license: ""
     hostname_ip: 10.1.7.10
 
 
